# pyExtractHEIC

./: .gitignore  ConvertIphonePics.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
heic_converter/: __init__.py  __main__.py  cli.py  converter.py
issues/: 2026-02-22_CI_Fails_ModuleNotFoundError.md
tests/: test_cli.py  test_converter.py
